[package]
name = "eza"
description = "A modern replacement for ls"
authors = ["Benjamin Sago <ogham@bsago.me>", "Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.63.0"
exclude = ["/devtools/*", "/Justfile", "/Vagrantfile", "/screenshots.png"]
readme = "README.md"
homepage = "https://github.com/cafkafk/eza"
license = "MIT"
repository = "https://github.com/cafkafk/ez"
version = "0.10.1"


[[bin]]
name = "eza"


[dependencies]
ansi_term = "0.12"
glob = "0.3"
lazy_static = "1.3"
libc = "0.2.135"
locale = "0.2"
log = "0.4"
natord = "1.0"
num_cpus = "1.10"
number_prefix = "0.4"
scoped_threadpool = "0.1"
term_grid = "0.1"
terminal_size = "0.1.16"
timeago = { version = "0.3.1", default-features = false }
unicode-width = "0.1"
zoneinfo_compiled = "0.5.1"

[target.'cfg(unix)'.dependencies]
users = "0.11"

[dependencies.datetime]
version = "0.5.2"
default-features = false
features = ["format"]

[dependencies.git2]
version = "0.16"
optional = true
default-features = false

[build-dependencies.datetime]
version = "0.5.2"
default-features = false

[features]
default = [ "git" ]
git = [ "git2" ]
vendored-openssl = ["git2/vendored-openssl"]


# make dev builds faster by excluding debug symbols
[profile.dev]
debug = false

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
strip = true
opt-level = "s"


[package.metadata.deb]
license-file = [ "LICENCE", "4" ]
depends = "$auto"
extended-description = """
eza is a replacement for ls written in Rust.
"""
section = "utils"
priority = "optional"
assets = [
    [ "target/release/eza", "/usr/bin/eza", "0755" ],
    [ "target/release/../man/eza.1", "/usr/share/man/man1/eza.1", "0644" ],
    [ "target/release/../man/eza_colors.5", "/usr/share/man/man5/eza_colors.5", "0644" ],
    [ "completions/bash/eza", "/usr/share/bash-completion/completions/eza", "0644" ],
    [ "completions/zsh/_eza", "/usr/share/zsh/site-functions/_eza", "0644" ],
    [ "completions/fish/eza.fish", "/usr/share/fish/vendor_completions.d/eza.fish", "0644" ],
]
